# slack-name-flipper-and-avatar-generator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  main.py  name.py  pyproject.toml  slack.py
.github/workflows/: main.yml
slack_name_flipper_and_avatar_generator/: avatar.py  cli.py
