[tool.poetry]
name = "slack-name-flipper-and-avatar-generator"
version = "0.1.0"
description = ""
authors = ["Sven Grunewaldt <strayer@olle-orks.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cairosvg = "^2.4.2"
pylint = "^2.5.2"
black = "^19.10b0"
requests = "^2.23.0"
humanize = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
